--- a/style/base/_variables.scss
+++ b/style/base/_variables.scss
@@ -1,10 +1,10 @@
 // COLORS
-$primary-color: #36d1dc;
-$secondary-color: #5b86e5;
+$primary-color: #3a6186;
+$secondary-color: #89253e;
 $font-family: "Montserrat", sans-serif;
 
-$light-white: #e5e5e5;
-$white-color: #ffffff;
+$light-white: #fdfaf5;
+$white-color: #fdfaf5;
 $dark-grey: #333333;
 
 $dark-blue-text: #272341; // For headings
