--- a/style/sections/_about.scss
+++ b/style/sections/_about.scss
@@ -28,9 +28,11 @@
       height: 100%;
       align-items: center;
       justify-content: center;
+
       img {
         max-width: 350px;
         width: 100%;
+        border-radius: 2rem;
       }
 
       @include respond(tab-land) {
